crates/jsonschema-codegen/tests/ui/unresolved_dynamic_ref_unevaluated.stderr
error: Failed to resolve `$ref` `#/missing`: Failed to resolve #/missing: Pointer '/missing' does not exist
 --> tests/ui/unresolved_dynamic_ref_unevaluated.rs:1:1
  |
1 | #[jsonschema::validator(schema = r##"{"$dynamicRef":"#/missing","unevaluatedProperties":false,"unevaluatedItems":false}"##)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
